DevOps/terraform-aws-master/terraform-aws-master/internet_gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    "Name" = "my-terraform-gateway"
  }
}
