DevOps/terraform-aws-master/terraform-aws-master/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.cidr_block
  tags = {
    "Name" = "terraform-vpc"
  }
}
